Modernize lighty-gnmi-sb to be compliant with ODL
Modernize our code in lighty-gnmi-sb with:
- use orElseThrow instead of get
- use java.nio.Path instead of Paths

Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>